# Mini-Trading-System

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  fix_messages_only.txt  fix_test_examples.txt
src/: CMakeLists.txt  main.cpp  trading_system.cpp  trading_system.h
src/core/: matching_engine.cpp  matching_engine.h  order.cpp  order.h  order_book.cpp  order_book.h
src/gateway/: fix_gateway.h
src/network/: tcp_server.cpp  tcp_server.h  win_socket.h
src/protocol/: fix_message.cpp  fix_message.h  fix_message_builder.cpp  fix_message_builder.h  fix_session.cpp  fix_session.h  fix_tags.h
tests/: CMakeLists.txt  test_fix_message.cpp  test_order.cpp  test_order_book.cpp  test_server.cpp
tools/: CMakeLists.txt
